2005-07-01  Ross Burton  <ross@burtonini.com>

	* autogen.sh:
	Use gnome-common (Ali Akcaagac).

2005-07-01    Madhan Raj M  <madhanrm@cvs.gnome.org>

	* src/sj-extractor.c (sj_extractor_cancel_extract):
	Set the state to NULL when extraction is cancelled.

2005-07-01  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.3.

2005-07-01  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Add just_say_yes() so that gnomevfssink will always overwrite
	files.  At the moment we do this check before starting the
	pipeline so this is safe.

	* src/sj-extracting.c:
	Stop trying to manipulate a non-existant button.

	* src/sj-play.c:
	Check the pipeline is set before stopping it.

	* src/sj-main.c:
	Set the play menu item to sensitive instead of insensitive when we
	have a CD.

2005-07-01  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/Makefile.am:
	* src/sj-extracting.c:
	* src/sj-main.c:
	* src/sj-play.[ch]:
	* src/sound-juicer.h:
	Merge the CD player branch.  Thanks to Ronald Bultje for his
	excellent work on this (#308755).

2005-06-30  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Change the genre combo to an entry.

	* src/sj-extracting.c:
	Update for combo->entry.

	* src/sj-extractor.c:
	Set the MusicBrainz tags last in case GStreamer doesn't support
	them, and set the genre from the album genre string.

	* src/sj-main.c:
	Set an entry completion based on a typical set of genres.

	* src/sj-structures.[ch]:
	Move the track-level genre enum to an album-level genre string.

	* src/sj-metadata-musicbrainz.c:
	Update for genre changes.

	* src/Makefile.am:
	* src/sj-genres.[ch]:
	Removed SjGenre, no longer needed.

2005-06-27  Ross Burton  <ross@burtonini.com>

	* acinclude.m4:
	Removed, GStreamer ships the element check macro now.

2005-06-25  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2005-06-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in: