@@ -1,3 +1,8 @@
+2005-07-03 Madhan Raj M  <madhanrm@cvs.gnome.org>
+
+	* src/sj-extracting.c: (cleanup), (on_extract_activate)
+	Disable play button while extracting.
+
 2005-07-01  Ross Burton  <ross@burtonini.com>
 
 	* autogen.sh:
